# aoc2025

./: Cargo.toml  my.txt  out.txt
.cargo/: config.toml
src/: main.rs  template.txt  util.rs
src/template/: mod.rs  runner.rs
src/template/commands/: mod.rs  tui.rs
